Fixed issue with span not aligning properly

--- a/blocks/advanced-heading/editor.scss
+++ b/blocks/advanced-heading/editor.scss
@@ -1,3 +1,9 @@
+span {
+	&.wp-block-themeisle-blocks-advanced-heading {
+		display: block;
+	}
+}
+
 .wp-block-themeisle-blocks-advanced-heading-header-panel {
 	&.is-opened {
 		padding: 0;
